docs: add documentations of academic term routes
