# src/main/routes/modules/academicTermRoutes.ts
@@ -21,6 +21,38 @@ academicTermRoutes.post(
   adminRoleMiddleware,
   authMiddleware,
   adaptRoute(
+    /* 
+      #swagger.tags = ['Academic Term']
+      #swagger.summary = 'Endpoint for create a new academic term'
+      #swagger.security = [{ "bearerAuth": [] }]
+      #swagger.requestBody = {
+        schema: { $ref: "#/definitions/AcademicTermCreateRequestDTO" }
+      } 
+      #swagger.responses[201] = {
+        description: "Created",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermCreateResponseDTO" }
+          }           
+        }
+      }
+      #swagger.responses[400] = {
+        description: "Name already exists",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermNameAlreadyExistsError" }
+          }           
+        }
+      }
+      #swagger.responses[500] = {
+        description: "Server error",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/ServerError" }
+          }           
+        }
+      }     
+    */
     academicTermModuleFactory.makeController(
       AcademicTermModuleAction.CREATE,
     ),
@@ -32,6 +64,27 @@ academicTermRoutes.get(
   adminRoleMiddleware,
   authMiddleware,
   adaptRoute(
+    /* 
+      #swagger.tags = ['Academic Term']
+      #swagger.summary = 'Endpoint for get all academic terms'
+      #swagger.security = [{ "bearerAuth": [] }]
+      #swagger.responses[200] = {
+        description: "Ok",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermGetAllResponseDTO" }
+          }           
+        }
+      }
+      #swagger.responses[500] = {
+        description: "Server error",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/ServerError" }
+          }           
+        }
+      }     
+    */
     academicTermModuleFactory.makeController(
       AcademicTermModuleAction.GET_ALL,
     ),
@@ -43,6 +96,36 @@ academicTermRoutes.get(
   adminRoleMiddleware,
   authMiddleware,
   adaptRoute(
+    /* 
+      #swagger.tags = ['Academic Term']
+      #swagger.summary = 'Endpoint for get academic term by id'
+      #swagger.security = [{ "bearerAuth": [] }]
+      #swagger.parameters['id'] = { type: 'string'}
+      #swagger.responses[200] = {
+        description: "Ok",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermGetByIdResponseDTO" }
+          }           
+        }
+      }
+      #swagger.responses[404] = {
+        description: "Not found",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermNotFoundError" }
+          }           
+        }
+      }     
+      #swagger.responses[500] = {
+        description: "Server error",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/ServerError" }
+          }           
+        }
+      }     
+    */
     academicTermModuleFactory.makeController(
       AcademicTermModuleAction.GET_BY_ID,
     ),
@@ -54,6 +137,44 @@ academicTermRoutes.put(
   adminRoleMiddleware,
   authMiddleware,
   adaptRoute(
+    /* 
+      #swagger.tags = ['Academic Term']
+      #swagger.summary = 'Endpoint for update academic term'
+      #swagger.security = [{ "bearerAuth": [] }]
+      #swagger.parameters['id'] = { type: 'string'}
+      #swagger.responses[200] = {
+        description: "Ok",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermUpdateResponseDTO" }
+          }           
+        }
+      }
+      #swagger.responses[400] = {
+        description: "Name already exists",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermUpdateNameAlreadyExists" }
+          }           
+        }
+      }     
+      #swagger.responses[404] = {
+        description: "Not found",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermNotFoundError" }
+          }           
+        }
+      }     
+      #swagger.responses[500] = {
+        description: "Server error",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/ServerError" }
+          }           
+        }
+      }     
+    */
     academicTermModuleFactory.makeController(
       AcademicTermModuleAction.UPDATE,
     ),
@@ -65,6 +186,31 @@ academicTermRoutes.delete(
   adminRoleMiddleware,
   authMiddleware,
   adaptRoute(
+    /* 
+      #swagger.tags = ['Academic Term']
+      #swagger.summary = 'Endpoint for remove academic term'
+      #swagger.security = [{ "bearerAuth": [] }]
+      #swagger.parameters['id'] = { type: 'string'}
+      #swagger.responses[204] = {
+        description: "No Content",
+      }   
+      #swagger.responses[404] = {
+        description: "Not found",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/AcademicTermNotFoundError" }
+          }           
+        }
+      }     
+      #swagger.responses[500] = {
+        description: "Server error",
+        content: {
+          "application/json": {
+            schema: { $ref: "#/definitions/ServerError" }
+          }           
+        }
+      }     
+    */
     academicTermModuleFactory.makeController(
       AcademicTermModuleAction.DELETE,
     ),
